--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="main">
-        <h1>Enter to generate QR code</h1>
-        <input class="textbox" type="text" placeholder="  Enter the Text or URL"> <br>
-        <button class="btn">Generate the QR</button>
+      <h1>Enter to generate QR code</h1>
+      <input
+        class="textbox"
+        type="text"
+        placeholder="  Enter the Text or URL"
+      />
+      <br />
+      <button class="btn">Generate the QR</button>
     </div>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
